base/nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.k8s.io/name: nextcloud
spec:
  selector:
    matchLabels:
      app.k8s.io/name: nextcloud
  template:
    metadata:
      labels:
        app.k8s.io/name: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nginx:latest
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
          - mountPath: /var/www/html/
            name: nextcloudvol
      volumes:
        - name: nextcloudvol
          persistentVolumeClaim:
            claimName: nextcloudvol
