base/nextcloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: appsvc
spec:
  selector:
    app.k8s.io/name: nextcloud
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
